# AI-Researcher

./: .env.template  .gitignore  AGENTS.md  README.md  global_state.py  main_ai_researcher.py  setup.cfg  web_ai_researcher.py
benchmark/: README.md
benchmark/final/reasoning/: agent_tools.json
benchmark_collection/: cli.py
cache_agent_tools_openrouter__alibaba__tongyi-deepresearch-30b-a3b:free/agents/: prepare_agent.json  survey_agent.json
cache_agent_tools_openrouter__alibaba__tongyi-deepresearch-30b-a3b:free/tools/: download_arxiv_source_by_title.json  github_search.json  load_instance.json
cache_one_layer_vq_openrouter__alibaba__tongyi-deepresearch-30b-a3b:free/agents/: prepare_agent.json
cache_one_layer_vq_openrouter__alibaba__tongyi-deepresearch-30b-a3b:free/tools/: download_arxiv_source_by_title.json  github_search.json  load_instance.json
docker/: Dockerfile  requirements.txt
paper_agent/: cli.py  writing.py
research_agent/: cli.py  constant.py  run_infer_idea.py  run_infer_level_1.sh  run_infer_level_2.sh  run_infer_plan.py
research_agent/inno/: cli.py  core.py
research_agent/inno/agents/: __init__.py
research_agent/inno/environment/: docker_env.py  utils.py
research_agent/inno/memory/: code_memory.py  codetree_memory.py  paper_memory.py  rag_memory.py  tool_memory.py
research_agent/inno/tools/: __init__.py  rag_code.py  rag_code_tree.py  terminal_tools.py  tool_retriever.py
research_agent/inno/workflow/: utils.py  (+1 more)
terminal_tmp/: terminal_output_20251120_222321___execute_command.txt  terminal_output_20251123_055524___execute_command.txt  terminal_output_20251123_055530___execute_command.txt  terminal_output_20251123_055739___execute_command.txt  terminal_output_20251123_055740___execute_command.txt  terminal_output_20251123_055743___gen_code_tree_structure.txt  terminal_output_20251123_055744___gen_code_tree_structure.txt  terminal_output_20251123_055756___read_file.txt  terminal_output_20251123_155331___read_file.txt  terminal_output_20251123_155333___read_file.txt  terminal_output_20251123_155336___gen_code_tree_structure.txt  terminal_output_20251123_155501___gen_code_tree_structure.txt  terminal_output_20251123_155511___read_file.txt  terminal_output_20251123_155652___read_file.txt  terminal_output_20251123_155713___read_file.txt  terminal_output_20251123_205406___read_file.txt  terminal_output_20251123_205407___gen_code_tree_structure.txt  terminal_output_20251123_205416___gen_code_tree_structure.txt  terminal_output_20251123_205721___gen_code_tree_structure.txt  terminal_output_20251123_205722___gen_code_tree_structure.txt  terminal_output_20251123_205939___gen_code_tree_structure.txt  terminal_output_20251123_205942___read_file.txt  terminal_output_20251123_205953___read_file.txt  terminal_output_20251123_205954___read_file.txt  terminal_output_20251123_210149___gen_code_tree_structure.txt  terminal_output_20251123_210154___read_file.txt  terminal_output_20251123_210157___gen_code_tree_structure.txt  terminal_output_20251123_210159___read_file.txt  terminal_output_20251123_210208___read_file.txt  terminal_output_20251123_210222___read_file.txt  terminal_output_20251124_165050___execute_command.txt  terminal_output_20251124_165057___execute_command.txt  terminal_output_20251124_165058___execute_command.txt  terminal_output_20251124_165100___execute_command.txt  terminal_output_20251124_165102___execute_command.txt  terminal_output_20251124_165104___execute_command.txt  terminal_output_20251124_165106___execute_command.txt  terminal_output_20251124_165108___execute_command.txt  terminal_output_20251124_165112___execute_command.txt  terminal_output_20251124_165116___execute_command.txt  (+27 more)
(+6 files in other folders)
