[metadata]
name = ai-researcher
version = 0.2.0
author = HKUDS
description = Fully-Automated scientific discovery agent framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = .
packages = find_namespace:
zip_safe = True
include_package_data = True
install_requires =
    numpy>=1.24.0,<2.0
    openai>=1.52.0
    requests>=2.28.0
    tqdm>=4.65.0
    python-dotenv>=1.0.0
    litellm>=1.55.0
    beautifulsoup4>=4.12.0
    browsergym==0.13.0
    chromadb>=0.4.0
    sentence_transformers>=2.2.0
    click>=8.1.0
    datasets>=2.14.0
    docling>=2.0.0
    Flask>=3.0.0
    gymnasium>=0.29.0
    html2text>=2020.1.16
    httpx>=0.25.0
    inquirer>=3.1.0
    loguru>=0.7.0
    mammoth>=1.6.0
    markdownify>=0.11.0
    matplotlib>=3.7.0
    networkx>=3.1
    pandas>=2.0.0
    pathvalidate>=3.2.0
    pdfminer.six>=20221105
    Pillow>=10.0.0
    playwright>=1.39.0
    prompt_toolkit>=3.0.0
    puremagic>=1.15
    pydantic>=2.0.0
    pydub>=0.25.0
    python_pptx>=0.6.21
    PyYAML>=6.0
    rich>=13.0.0
    SpeechRecognition>=3.10.0
    tenacity>=8.2.0
    termcolor>=2.3.0
    tiktoken>=0.5.0
    tree_sitter>=0.21.0
    tree_sitter_languages>=1.10.2
    uvicorn>=0.23.0
    youtube_transcript_api>=0.6.0
    gradio>=4.0.0
    arxiv>=2.0.0
    huggingface_hub>=0.34.0,<1.0


[options.packages.find]
where = .
include = research_agent*, paper_agent*, benchmark_collection*
    
python_requires = >=3.11

[options.entry_points]
console_scripts =
    ai-researcher = research_agent.cli:cli
    paper-agent = paper_agent.cli:cli
    benchmark = benchmark_collection.cli:cli

[options.extras_require]
dev =
    pre-commit
    pytest
full =
    filelock
    huggingface_hub
    instructor
    moviepy
    psutil
    sentence_transformers
    faster_whisper

[tool.autopep8]
max_line_length = 120
ignore = E501,W6
in-place = true
recursive = true
aggressive = 3
